chore: jvmargs